--- a/current.html
+++ b/current.html
@@ -8,7 +8,32 @@
     <title>Current</title>
 </head>
 <body>
- <h1 class="subtitle">coming soon</h1>
+ 
+    <div class="flashcards-container">
+        <div class="flashcard" onclick="flipCard(this)">
+            <div class="flashcard-inner">
+                <div class="front">
+                    <h2>OHM'S LAW</h2>   
+                </div>
+                <div class="back">
+                    <p class="f02">$$ V = IR $$</p>
+                </div>
+            </div>
+        </div>
+
+         
+    <div class="flashcards-container">
+        <div class="flashcard" onclick="flipCard(this)">
+            <div class="flashcard-inner">
+                <div class="front">
+                    <h2>Determine unknown Resistance using Meter Bridge</h2>   
+                </div>
+                <div class="back">
+                    <p class="f02">$$ X = R {l_x \over l_R} $$</p>
+                </div>
+            </div>
+        </div>
+
 
 
         <script src="script.js"></script>
