--- a/phy.html
+++ b/phy.html
@@ -12,9 +12,14 @@
         <div class="phytopics">
 
            <a class="link" href="electro.html"> <button class="phybutton">Electrostatics</button> </a>
+
            <a class="link" href="cap.html"> <button class="phybutton">Capacitors</button> </a>
+
            <a class="link" href="current.html"> <button class="phybutton">Current and Electricity</button> </a>
+
            <a class="link" href="mfec.html"> <button class="phybutton">Magnetic effect of electric current</button> </a>
+
+           <a class="link" href="magma.html"> <button class="phybutton">Magnetic Materials</button> </a>
 
         </div>
 
